# SYNTH

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ps1  configure.ps1  run.ps1
include/: Synth.h  typeDef.h
include/GUI/: Widget.h
include/Synth/: Amplifier.h  Filter.h  Oscillator.h  audioEngine.h
src/: Synth.cpp  Synth.h  SynthControls.h  hello.cpp  main.cpp  typeDef.h
src/GUI/: Button.cpp  Button.h  Slider.cpp  Slider.h  Widget.cpp  Widget.h  Widgets.h  gui.cpp  gui.h  textures.h
src/Synth/: Amplifier.cpp  Amplifier.h  Envelops.cpp  Envelops.h  Filter.cpp  Filter.h  LFO.cpp  LFO.h  LadderFilter.cpp  LadderFilter.h  Mixer.cpp  Mixer.h  Modules.h  Oscillator.cpp  Oscillator.h  audioEngine.cpp  audioEngine.h  keyboard.cpp  keyboard.h
